tests/baselines/reference/defaultExportsCannotMerge04(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
defaultExportsCannotMerge04.ts(1,25): error TS2652: Merged declaration 'Foo' cannot include a default export declaration. Consider adding a separate 'export default Foo' declaration instead.
defaultExportsCannotMerge04.ts(4,11): error TS2652: Merged declaration 'Foo' cannot include a default export declaration. Consider adding a separate 'export default Foo' declaration instead.
defaultExportsCannotMerge04.ts(8,11): error TS2395: Individual declarations in merged declaration 'Foo' must be all exported or all local.
defaultExportsCannotMerge04.ts(11,18): error TS2395: Individual declarations in merged declaration 'Foo' must be all exported or all local.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== defaultExportsCannotMerge04.ts (4 errors) ====
    export default function Foo() {
                            ~~~
!!! error TS2652: Merged declaration 'Foo' cannot include a default export declaration. Consider adding a separate 'export default Foo' declaration instead.
    }
    
    namespace Foo {
              ~~~
!!! error TS2652: Merged declaration 'Foo' cannot include a default export declaration. Consider adding a separate 'export default Foo' declaration instead.
        export var x;
    }
    
    interface Foo {
              ~~~
!!! error TS2395: Individual declarations in merged declaration 'Foo' must be all exported or all local.
    }
    
    export interface Foo {
                     ~~~
!!! error TS2395: Individual declarations in merged declaration 'Foo' must be all exported or all local.
    }